apps/ingress-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-test
spec:
  selector:
    app: ingress-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
    


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-test-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: ingress-test.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: ingress-test
#             port:
#               number: 80
